# MusicCategorizer

./: .gitignore  README.md  culture_scale_lab.ipynb  launch_scale_lab.py  music_scale_lab.ipynb  pyproject.toml  requirements.txt  run_notebook.py
music_categorizer/: __init__.py  analyzer.py  catalog.py  cli.py  examples.py  features.py  launch_notebook.py  notebook_launcher.py  notebook_ui.py
music_categorizer/data/: scale_templates.json
tests/: test_analyzer.py
